# induction-motor-fault-diagnosis2

./: README.md  main.py  main.py.bak  pyproject.toml
data/: motor_fault_sample_ordered.csv  motor_faults_extended.csv  motor_faults_new_faults.csv  motor_faults_training.csv  sample_motor_data.csv
docs/: documentation.md
notebooks/: motor_fault_analysis.ipynb
src/data/: preprocessing.py
src/models/: model.py
src/utils/: feature_engineering.py
src/webapp/: app.py
static/: script.js  style.css
templates/: index.html  result.html
tests/: test_diagnose.py
